<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gary.classtracker.LocationActivity"
    tools:showIn="@layout/activity_location">

    <TextView
        android:text="@string/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/location_textView"
        android:textSize="20sp"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edit_location_label"
        android:ems="10"
        android:id="@+id/location_editText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude_TextView"
        android:layout_above="@+id/record_location_button"
        android:textSize="20sp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latitude_TextView"
        android:layout_below="@+id/location_editText"
        android:textSize="20sp"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/record_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/record_location_button"
        android:layout_below="@+id/latitude_TextView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

